--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -137,3 +137,16 @@
     );
   }
 }
+
+body {
+  transition-property: opacity, background, transform, filter;
+  transition-timing-function: ease-in-out;
+  transition-duration: 200ms;
+}
+
+.page-transition {
+  opacity: 0;
+  background: black;
+  transform: translateY(40px);
+  filter: blur(12px);
+}
